# cryptographic-algorithms

./: .gitattributes  README.md  README.ru.md
attack-on-lfsr/: LFSR.h  README.md  generators.ipynb  main.cpp
attack-on-lfsr/encrypted/: ct3-out.fb2
g-model/: CMakeLists.txt  README.ru.md  g-model.cpp  g-model.h  main.cpp
g-model/reports/: CFB-1mb.txt  CFB-small.txt  ECB-entropy.txt
hill-climbing-algo/: README.md  README.ru.md
hill-climbing-algo/src/: hill_climbing_algo.py  ngram_score.py
hill-climbing-algo/src/decrypted/: ct1.txt  ct10.txt  ct11.txt  ct12.txt  ct13.txt  ct14.txt  ct15.txt  ct16.txt  ct17.txt  ct18.txt  ct19.txt  ct2.txt  ct3.txt  ct4.txt  ct5.txt  ct6.txt  ct7.txt  ct8.txt  ct9.txt
hill-climbing-algo/src/encrypted/: ct15.txt  ct16.txt  ct17.txt  ct18.txt  ct19.txt
hills-vigeners-ciphers/: README.md  README.ru.md
hills-vigeners-ciphers/src/: hills_cipher.py  main.py  vigener_cipher.py
rsa-impl/: BigInt.h  CMakeLists.txt  README.md  big_int.h  bigrsa.h  g.cpp  g.h  main.cpp  rsa.h  signature1.txt
